--- a/src/main/resources/bases.properties
+++ b/src/main/resources/bases.properties
@@ -1,7 +1,7 @@
 bases.driver.class.name=com.mysql.jdbc.Driver
 bases.user=root
 bases.password=root
-bases.url=jdbc:mysql://localhost/bases
+bases.url=jdbc:mysql://localhost/db?useSSL=false
 
 #bases.hbm2ddl=hibernate.hbm2ddl.auto
 #bases.hbm2ddl.val=update
